--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.2~1) unstable; urgency=low
+
+  * UNRELEASED
+
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Wed, 21 Apr 2010 11:58:41 +0300
+
 libmeegotouch (0.20.1-1) unstable; urgency=low
 
   * New version
