--- a/doc/src/mainpage.dox
+++ b/doc/src/mainpage.dox
@@ -13,6 +13,7 @@
       <li><a href="installation.html">Installation</a> and First Steps with DirectUI</li>
       <li>Examples and Demos</li>
       <li><strong><a href="news.html">What's New in DirectUI</a></strong></li>
+       <li><strong><a href="tutorial.html">Tutorial</a></strong></li>
       </ul>
     </td>
     <td>
