--- a/doc/src/mainpage.dox
+++ b/doc/src/mainpage.dox
@@ -9,10 +9,10 @@
   <tr>
     <td>
       <ul>
-       <li><strong><a href="introduction.html">Introduction to DirectUI</a></strong></li>
-      <li><a href="installation.html">Installation</a> and First Steps with DirectUI</li>
+       <li><strong><a href="introduction.html">Introduction to MeeGo Touch</a></strong></li>
+      <li><a href="installation.html">Installation</a> and First Steps with MeeGo Touch</li>
       <li>Examples and Demos</li>
-      <li><strong><a href="news.html">What's New in DirectUI</a></strong></li>
+      <li><strong><a href="news.html">What's New in MeeGo Touch</a></strong></li>
        <li><strong><a href="tutorial.html">Tutorial</a></strong></li>
       </ul>
     </td>
@@ -29,7 +29,7 @@
     <td>
       <ul>
        <li><a href="http://qt.gitorious.com/maemo-6-ui-framework">Code repository</a></li>
-       <li><a href="http://qt.gitorious.com/maemo-6-ui-framework/pages/Home">DirectUI Wiki</a></li>
+       <li><a href="http://qt.gitorious.com/maemo-6-ui-framework/pages/Home">MeeGo Touch Wiki</a></li>
       </ul>
     </td>
   </tr>
@@ -44,7 +44,7 @@
       <ul>
        <li>The MeeGo Widget Model</li>
        <li>MeeGo theme system</li>
-       <li><a href="servicefw.html">Maemo Service Framework</a></li>
+       <li><a href="servicefw.html">MeeGo Touch Service Framework</a></li>
         <li><a href="i18n.html">Internationalization</a></li>
         <li><a href="plainqt.html">Developing Qt applications for Maemo 5 and MeeGo</a></li>
       </ul>
