--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.2-2) unstable; urgency=low
+
+  * Fixes: NB#165876 - Missing header files in libmeegotouch-dev
+
+ -- Tomas Junnonen <tomas.junnonen@nokia.com>  Wed, 28 Apr 2010 14:46:00 +0200
+
 libmeegotouch (0.20.2-1) unstable; urgency=low
 
   * Implemented: SWP#-DUI-2668, SWP#-DUI-2660, SWP#-DUI-2652, SWP#-DUI-2651
