--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.2.1-1) unstable; urgency=low
+
+  * Fixes: NB#165741 - duicontrolpanel crashes sometimes after tapping connect in WLAN security key dialog
+
+ -- Tomas Junnonen <tomas.junnonen@nokia.com>  Thu, 29 Apr 2010 13:03:00 +0200
+
 libmeegotouch (0.20.2-2) unstable; urgency=low
 
   * Fixes: NB#165876 - Missing header files in libmeegotouch-dev
