--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.5~1) unstable; urgency=low
+
+  * [UNRELEASED]
+
+ -- Daniel d'Andrada <daniel.dandrada@nokia.com>  Mon, 03 May 2010 14:34:04 +0300
+
 libmeegotouch (0.20.4-1) unstable; urgency=low
 
   * Fixes: NB#165612 - tapping the information banner, information banner is closing after 2 seconds, it is not closing immediately
